--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
     <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Products</a>
+          <a class="nav-link active" href="#">Menu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Alaska</a>
+          <a class="nav-link" href="#">Nuestra Historia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Gallery</a>
+          <a class="nav-link" href="#">Galleria</a>
         </li>
       </ul>
 
@@ -34,24 +34,24 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://images.unsplash.com/photo-1558945692-30e7491e6ac7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1490&q=80" class="d-block w-100" alt="...">
+              <img src="https://images.unsplash.com/photo-1455619452474-d2be8b1e70cd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                <h5 class="titulo-grande">Comida como hecha en casa</h5>
+                <p class="texto-carrusel">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://images.unsplash.com/photo-1551299328-edf60da706a2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="d-block w-100" alt="...">
+              <img src="https://images.unsplash.com/photo-1447078806655-40579c2520d6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h5 class="titulo-grande">Platillos Gourmetl</h5>
+                <p class="texto-carrusel">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://images.unsplash.com/photo-1551299328-3f5718b4bb8b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="d-block w-100" alt="...">
+              <img src="https://images.unsplash.com/photo-1457666134378-6b77915bd5f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1491&q=80" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                <h5 class="titulo-grande">Postres</h5>
+                <p class="texto-carrusel">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
               </div>
             </div>
           </div>
@@ -71,18 +71,18 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Conoce nuestros tours</h5>
-              <p class="card-text">Conoce nuestra gran variedad de tours.</p>
-              <a href="something" class="button3">Agendar Tour</a>
+              <h5 class="card-title">Reserva</h5>
+              <p class="card-text">Reserva tu cita con nosotros.</p>
+              <a href="something" class="button3">Reservar</a>
             </div>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Ven a visitarnos</h5>
-              <p class="card-text">Reserva tu hotel.</p>
-              <a href="something" class="button3">Reservar</a>
+              <h5 class="card-title">Pide a domicilio</h5>
+              <p class="card-text">Disfruta de nuestra comida en casa.</p>
+              <a href="something" class="button3">Llamar</a>
             </div>
           </div>
         </div>
